fix: Use the correct url for the NuGet icon

--- a/src/StarWars.Names/StarWars.Names.csproj
+++ b/src/StarWars.Names/StarWars.Names.csproj
@@ -13,7 +13,7 @@
     <PackageProjectUrl>https://github.com/michael-wolfenden/StarWarsNames</PackageProjectUrl>
     <RepositoryUrl>https://github.com/michael-wolfenden/StarWarsNames</RepositoryUrl>
     <PackageLicenseUrl>https://github.com/michael-wolfenden/StarWarsNames/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://raw.github.com/michael-wolfenden/StarWarsNames/assets/blob/master/logo.png</PackageIconUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/michael-wolfenden/StarWarsNames/master/assets/logo.png</PackageIconUrl>
   </PropertyGroup>
   <!-- End Nuget -->
 
